# choripy

./: .dockerignore  .env  .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.html  README.md  alembic.ini  babel.ini  changelog.md  docker-compose.override.yml  docker-compose.yml  install.py  mantra.md  package.json  pyproject.toml  quarto.yml  requirements-dev.txt  requirements.txt  run.py  setup.cfg
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
config/: __init__.py  config.py  default.yml  local.yml  logging.yml
config/conf/hydra/: config.yaml
docs/: report.qmd  setup.md
src/api/: auth.py  flask_app.py  main.py
src/api/templates/: home.html
src/core/: auth.py  logging_setup.py
src/db/: database.py  models.py  setup.py
src/etl/: aggregate.py  clean.py
src/web/: app.py
src/web/static/css/: main.scss
src/web/templates/: base.html  index.html  page.html
src/web/templates/admin/: page_create.html  page_edit.html
src/workers/: celery_app.py
src/workers/tasks/: update_data.py
static/js/: main.js
tests/: conftest.py
tests/api/: test_main.py  test_root.py
tests/db/: test_models.py
tests/models/: test_models.py
tests/web/: test_app.py
tools/: print_project.py
tools/plots/: generate.py
